5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1734_2499.log
== SUBMITION (2019-05-09 18:34:05) 
-- CODE:
from math import factorial
e = 0
indice = 1
indice = 1

 e= e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
-- EXECUTION TIME:
0.165365
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 6
    e= e + (1 / factorial(indice))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:34:27) 
-- CODE:
from math import factorial
e = 0
indice = 1
indice = 1

 e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
-- EXECUTION TIME:
0.122487
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 6
    e = e + (1 / factorial(indice))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:34:57) 
-- CODE:
from math import factorial
e = 0
indice = 1


 e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
-- EXECUTION TIME:
0.176079
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 6
    e = e + (1 / factorial(indice))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:35:02) 
-- CODE:
from math import factorial
e = 0
indice = 1


 e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
-- ERROR:
File "XXXX", line 6
    e = e + (1 / factorial(indice))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:36:02) 
-- CODE:
from math import factorial
k= int(input())
e = 0
indice = 1

while()
 e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
-- EXECUTION TIME:
0.183303
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 6
    while()
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:55:34) 
-- CODE:
from math import factorial
k= int(input())
e = 1.0
indice = 1

while(indice <= k)
 e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
-- EXECUTION TIME:
0.210827
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 6
    while(indice <= k)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:59:22) 
-- CODE:
from math import factorial
k= int(input())
e = 5
indice = 0

while(indice <= k+1)
 e = e + (1 / factorial(indice) )
	indice = indice + 1 
print(round(e , 8))
	
-- ERROR:
File "XXXX", line 6
    while(indice <= k+1)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:07:04) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if( k == 1):
	print(1.0)
else:
	while( indice <= k ):
	e = e + (1 / factorial(indice) )
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.160194
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice) )
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:07:17) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice <= k ):
	e = e + (1 / factorial(indice) )
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.139534
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice) )
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:07:20) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice <= k ):
	e = e + (1 / factorial(indice) )
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- ERROR:
File "XXXX", line 9
    e = e + (1 / factorial(indice) )
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:13:05) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice <= k ):
	e = e + (1 / factorial(indice))
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.161164
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:13:41) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice < k ):
	e = e + (1 / factorial(indice))
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.137338
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:13:52) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice<k ):
	e = e + (1 / factorial(indice))
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.141233
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:14:00) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice < k ):
	e = e + (1 / factorial(indice))
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.156854
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:14:38) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice < k ):
	e = e + (1 / factorial(indice))
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- ERROR:
File "XXXX", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:15:12) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice < k ):
	e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.162077
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:15:17) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice < k ):
	e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.207094
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:15:19) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice < k ):
	e = e + (1 / factorial(indice))
	indice = indice + 1 
print(round(e , 8))
	
	


	
-- ERROR:
File "XXXX", line 9
    e = e + (1 / factorial(indice))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:15:55) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
	while( indice < k ):
		e = e + (1 / factorial(indice))
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.123529
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 5
    while( indice < k ):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:17:20) 
-- CODE:
from math import factorial
k= int(input())
e = 1
indice = 1
if(k == 1):
	print(1.0)
else:
	while( indice < k ):
		e = e + (1 / factorial(indice))
		indice = indice + 1 
print(round(e , 8))
	
	


	
-- EXECUTION TIME:
0.159223
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
